--- a/joomla.html
+++ b/joomla.html
@@ -1,1 +1,2 @@
-<p>After changing your password, <a href="http://${location.hostname}/administrator/" target="_blank">click here</a> to open your Joomla administration panel.</p>
+<div>After changing your password, <a href="http://${location.hostname}/administrator/" target="_blank">click here</a> to open your Joomla administration panel.<br />
+Your Awstats statistics can be found <a href="http://${location.hostname}/cgi-bin/awstats.pl" target="_blank">here</a>.</div>
